[tool.poetry]
name = "picrawler"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
robot-hat = {git = "https://github.com/lmanhes/robot-hat.git"}
pyaudio = "0.2.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
