[tool.poetry]
name = "picrawler"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
robot-hat = { git = "https://github.com/lmanhes/robot-hat", branch = "v2.0"}
pyaudio = "0.2.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
